fix post overflow-issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,7 +30,7 @@ pre {
   height: auto;
   max-height: 400px;
   overflow: auto;
-  background-color: #eeeeee;
+  /* background-color: #eeeeee; */
   word-break: normal !important;
   word-wrap: normal !important;
   white-space: pre !important;
